finish the Calendar task

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,8 +1,36 @@
 
 {
     "Calendar_Task":"التقويم" ,
-    "Not_Available":"غير متاح " ,
-    "Available" :"متاح " ,
-    "Are_You" : "هل انت:"
+    "Not_Available":"غير متاحة " ,
+    "Available" :"متاحة " ,
+    "Are_You" : "هل انت:",
+
+    "the_previous" : "السابق",
+    "Book_the_appointment" : "حجز الموعد",
+    "The Time Page" : "صفحة الاوقات",
+
+    "8:00 ص": "8:00 ص",
+    "8:30 ص": "8:30 ص",
+    "9:00 ص": "9:00 ص",
+    "9:30 ص": "9:30 ص",
+    "10:00 ص": "10:00 ص",
+    "10:30 ص": "10:30 ص",
+    "11:00 ص": "11:00 ص",
+    "11:30 ص": "11:30 ص",
+    "12:00 ظ": "12:00 ظ",
+    "12:30 ظ": "12:30 ظ",
+    "1:00 ظ": "1:00 ظ",
+    "1:30 ظ": "1:30 ظ",
+    "2:00 ظ": "2:00 ظ",
+    "2:30 ظ": "2:30 ظ",
+    "3:00 ظ": "3:00 ظ",
+    "3:30 ظ": "3:30 ظ",
+    "4:00 م": "4:00 م",
+    "4:30 م": "4:30 م",
+    "5:00 م": "5:00 م",
+    "5:30 م": "5:30 م",
+    "6:00 م": "6:00 م",
+    "6:30 م": "6:30 م"
+    
 
 }
