--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,8 +1,31 @@
 {
-    "Calendar_Task": "Calendar Task" ,
-    "Not_Available": "Not Available" ,
-    "Available" : "Available" ,
-    "Are_You" : "Are You:"
-
-
+    "Calendar_Task": "Calendar Task",
+    "Not_Available": "Not Available",
+    "Available": "Available",
+    "Are_You": "Are You:",
+    "the_previous": "the previous",
+    "Book_the_appointment": "Book the appointment",
+    "The Time Page": "The Time Page",
+    "8:00 ص": "8:00 AM",
+    "8:30 ص": "8:30 AM",
+    "9:00 ص": "9:00 AM",
+    "9:30 ص": "9:30 AM",
+    "10:00 ص": "10:00 AM",
+    "10:30 ص": "10:30 AM",
+    "11:00 ص": "11:00 AM",
+    "11:30 ص": "11:30 AM",
+    "12:00 ظ": "12:00 PM",
+    "12:30 ظ": "12:30 PM",
+    "1:00 ظ": "1:00 PM",
+    "1:30 ظ": "1:30 PM",
+    "2:00 ظ": "2:00 PM",
+    "2:30 ظ": "2:30 PM",
+    "3:00 ظ": "3:00 PM",
+    "3:30 ظ": "3:30 PM",
+    "4:00 م": "4:00 PM",
+    "4:30 م": "4:30 PM",
+    "5:00 م": "5:00 PM",
+    "5:30 م": "5:30 PM",
+    "6:00 م": "6:00 PM",
+    "6:30 م": "6:30 PM"
 }
